--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,8 @@ pydantic = "^2.8.2"
 
 
 [tool.poetry.group.dev.dependencies]
-black = "^24.4.2"
 pytest = "^8.2.2"
+ruff = "^0.5.7"
 
 [tool.poetry.scripts]
 "arch-config" = "arch_config.main:main"
